--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.19.2",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "swiper": "^11.2.10",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "yarn": "^1.22.22",
     "zustand": "^5.0.6"
   },
