--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-# https://www.builder.io/c/docs/using-your-api-key
 PUBLIC_BUILDER_KEY=d065fe41c22b48f09cad07d8b1e91f62
+VITE_PROJECT_ID=bb733513ab8850f9fa94d955068041ad
+VITE_API_URL=http://localhost:5832/api
+VITE_APP_EXCHANGE_RATE_API_KEY=f7d364f8161fe048f17ffc2a
