--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@reown/appkit": "^1.7.18",
+    "@reown/appkit-adapter-wagmi": "^1.7.18",
+    "@tanstack/react-query": "^5.84.2",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
+    "ethers": "^6.15.0",
     "framer-motion": "^12.19.2",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
@@ -32,6 +36,9 @@
     "swiper": "^11.2.10",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "viem": "^2.31.7",
+    "wagmi": "^2.15.6",
+    "web3modal": "^1.9.12",
     "yarn": "^1.22.22",
     "zustand": "^5.0.6"
   },
